	- Cleanup build system wrt CFLAGS handling placing it all in one place
	  in configure.ac and removing everything related from the Makefile.am
	  files.
	- Fix all compiler warnings (Richard Russon, me)
	- Make libntfs more portable by removing the dependency on
	  asm/byteorder.h and using <endian.h> and <byteswap.h> instead. Also
	  adapting our endians.h appropriately. (Richard Russon)
	- Various other small cleanups and fixes.

10/11/2003 - 1.8.0beta2 - More features!
	- Merge ntfsprogs-gnomevfs written by Jan Kratochvil.

23/10/2003 - 1.8.0beta - The Long Overdue(TM) release.
	- Further work on attribute resizing.
	- Fix two logic inversion bugs in dir.c. Thanks to Russ Christensen for
	  finding the first one.
	- Fix attempt to release I30 internal constant. (Russ Christensen)
	- Fix off-by-one error in disk_io.c::ntfs_cluster_{read,write}(). (Ian
	  Jackson)
	- Add -fms-extensions when compiling with gcc-3.2+.
	- Update for newer autoconf/automake.
	- Abstract low level device operations (include/device,h and
	  libntfs/device.c) and adapt utilities to changes.
	- Added ntfsclone utility written by Szabolcs Szakacsits.
	- Added ntfsls utility written by Lode Leroy.
	- Fix bugs in dir.c::ntfs_readdir() where we try to close ia_na when
	  it is NULL.
	- Return errno ENOTDIR from dir.c::ntfs_readdir() when called with a
	  file inode.
	- Fix a silly bug in attrib.c::ntfs_external_attr_find() which caused
	  us to always return the same attribute during an enumeration as soon
	  as the end of the attributes to be enumerated was reached thus
	  causing the program doing the enumeration to hang in a tight loop.
	  NOTE: There is still work to do as ctx->al_entry is set to NULL
	  instead of to the position in the attribute list at which to insert.
	- Added man pages for the new utilities (Richard Russon and me).
	- Lots of extensions and cleanups to ntfsls.
	- Move common bits from disk_io.c into device.c and rename the Unix io